src/frontend/styles/general-chatroom-styling.css
.chat-container {
  --container-height: calc(100vh - 150px);
  height: var(--container-height);
  
  & .messages-container-outer {
    --mco-height: calc(100vh - calc(150px + var(--p-block)));
    height: var(--mco-height);
    display: flex;
    flex-direction: column;
    position: relative;
   
    & .chatroom-title {
      position: absolute;
      top: 0;
      border-top-left-radius: 1.5rem;
      z-index: 2;
      width: 100%;
      color: var(--lemon-chiffon);
      background-image: linear-gradient(180deg, var(--bg-clr) 35%, transparent 80%);
      height: 80px;
      padding: var(--p-block) calc(var(--p-inline) / 2);
    }
    
    & .messages-scroll-wrapper {
      min-height: calc(var(--mco-height) - 100px);
      overflow-y: scroll;

      & .messages-container-inner {
        min-height: calc(var(--mco-height) - 100px);
        padding-inline: calc(var(--p-inline) / 2);
        padding-bottom: var(--p-block);
        display: flex;

        & .message-timeline,
        & .message-view {
          display: flex;
          min-height: 100%;
          flex-direction: column;
          justify-content: end;
          gap: var(--gap);
        }

        & .message-timeline {
          width: fit-content;
          min-width: 80px;
          min-height: 100%;
          border-right: 2px solid var(--thistle-03);
          padding-right: calc(var(--p-inline) / 2);

          & .timestamp-wrapper {
            display: flex;
            align-items: center;
            min-height: 30px;
            width: 100%;
            
            & .timestamp {
              color: var(--thistle-03);
            }
          }
        }

        & .message-view {
          box-shadow: var(--inset-shadow), var(--inset-shadow-hl);

          & .message-wrapper {
            display: flex;
            align-items: center;
            width: 100%;
            min-height: 30px;
            gap: var(--gap);
            border-radius: 1rem;
            padding-inline: calc(var(--p-inline) / 2);
            cursor: pointer;

            & .msg-sender {
              color: var(--lemon-chiffon);
            } 

            & .user-replying-to {
              opacity: 0.5;
              color: var(--font-clr);
            }

            & .user-message {
              color: var(--font-clr);
            }
          }

          & .message-wrapper.replying-to {
            box-shadow: var(--shadow-inset-hl);
          }
        }
      } 
    }

    & .send-message-footer {
      height: 50px;
      grid-row: 3 / 4;
      padding: var(--p-block) calc(var(--p-inline) / 2);
      border-top: 1px solid var(--thistle-03);

      & .send-message-wrapper {
        display: flex;
        align-items: center;
        justify-content: space-between;
        gap: var(--gap);

        & .send-message-btn,
        & .send-message-input {
          background: var(--card-clr);
          border-radius: 1rem;
          box-shadow: var(--inset-shadow), var(--shadow);
          padding: var(--p-block) var(--p-inline);
        }

        & .send-message-input {
          color: var(--lemon-chiffon);
          flex: 20;  
        }

        & .send-message-btn {
          cursor: pointer;
          color: var(--thistle);
          flex: 1;

        }
      }  
    }
  }
}

